--- a/app/src/main/res/layout/confirm_matricula.xml
+++ b/app/src/main/res/layout/confirm_matricula.xml
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="" />
+            android:text="Deseja matricular-se neste curso?" />
 
         <LinearLayout
             android:orientation="vertical"
